# research_grant_info_extract

./: .env.example  README.md  pyproject.toml
data/: research_grants.xlsx
src/project_name/: main.py
src/research_grant/: data.py  graph.py  llm.py  main.py  nodes.py  state.py
tests/: test_graph_build.py  test_main.py  test_routing.py
